updated logging